--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <img class="scene-img" src="images/현정놀램.png" alt="" />
         </div>
         <div class="img-item">
-          <img class="scene-img" src="images/다섯명만남.jpeg" alt="" />
+          <img class="scene-img" src="images/mat-5.jpeg" alt="" />
         </div>
         <div class="img-item">
           <img class="scene-img" src="images/은지1.png" alt="" />
