--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
         </div>
         <div class="step">
           <p>
-            첫번째로 도착한 곳은 남양주에 있는 대게집 이였다. 10m쯤 되보이는
-            대형 수족관을 가지고있는 식당이였는데, 우리는 지체하지 않고 우리를
-            부르고 있는 킹크랩 앞으로 갔다. 킹크랩은 명성답게 가격이 상당했다.
-            1키로에 얼마라고했는데 기억은 나지않지만 주인이 “60만원!” 이라고
-            외치니 찬호PD님이 “여유있어!” 라는 간지나는 맨트가 기억이난다.
+            첫 번째로 도착한 곳은 남양주에 있는 한 식당. 10m쯤 돼 보이는 대형
+            수족관을 가진 대게집이었다. 우리는 지체하지 않고 우리를 부르고 있는
+            킹크랩 앞으로 갔다. 킹크랩은 명성답게 가격이 상당했다. 1킬로에
+            얼마라고 했는데 기억은 나지 않지만 주인이 “60만 원!”라고 외치니
+            찬호PD님이 “여유있어!” 라는 간지나는 맨트가 기억이 난다.
           </p>
         </div>
         <div class="step">
