--- a/index.html
+++ b/index.html
@@ -47,29 +47,62 @@
         </div>
       </div>
     </section>
-    <section class="normal-content global-width">
-      <h2>뭐쓸까</h2>
-      <p>
-        블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라
-        블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라
-        블라 블라 블라 블라
-      </p>
-      <h2>뭐쓸까</h2>
-      <p>
-        블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라
-        블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라
-        블라 블라 블라 블라
-      </p>
-      <h2>뭐쓸까</h2>
-      <p>
-        블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라
-        블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라 블라
-        블라 블라 블라 블라
-      </p>
+    <section class="container-bottom global-width">
+      <article>
+        <h2>Youtube</h2>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/idB5YvGoGS8"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </article>
+      <article>
+        <h2>Youtube</h2>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/idB5YvGoGS8"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </article>
+      <article>
+        <h2>이경란PD의! YOUTUBE!</h2>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/idB5YvGoGS8"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </article>
     </section>
     <footer class="global-footer">
-      #박인희 #이경란 #이찬호 #황현정 #오지연 #김은지 #안훈민 #소통트립
-      #여전히성공적 #또 #가고싶다 #한번더 #보내주세요사장님
+      <div class="tags">
+        <span class="tag">#삼성화재</span>
+        <span class="tag">#E상한I들</span>
+        <span class="tag">#박인희</span>
+        <span class="tag">#이경란</span>
+        <span class="tag">#이찬호</span>
+        <span class="tag">#황현정</span>
+        <span class="tag">#오지연</span>
+        <span class="tag">#김은지</span>
+        <span class="tag">#안훈민</span>
+        <span class="tag">#소통트립</span>
+        <span class="tag">#여전히성공적</span>
+        <span class="tag">#또</span>
+        <span class="tag">#가고싶다</span>
+        <span class="tag">#한번더</span>
+        <span class="tag">#보내주세요사장님</span>
+      </div>
     </footer>
 
     <script src="index.js" type="module"></script>
