--- a/index.html
+++ b/index.html
@@ -49,34 +49,9 @@
     </section>
     <section class="container-bottom global-width">
       <article>
-        <h2>Youtube</h2>
+        <h2>youtube</h2>
         <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/idB5YvGoGS8"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-        ></iframe>
-      </article>
-      <article>
-        <h2>Youtube</h2>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/idB5YvGoGS8"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-        ></iframe>
-      </article>
-      <article>
-        <h2>이경란PD의! YOUTUBE!</h2>
-        <iframe
-          width="560"
-          height="315"
+          class="youtube"
           src="https://www.youtube.com/embed/idB5YvGoGS8"
           title="YouTube video player"
           frameborder="0"
