--- a/index.html
+++ b/index.html
@@ -11,14 +11,26 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="header">
+    <section style="height: 100vh; position: relative">
+      <div class="container-title">
+        <h1 class="page-title">E상한I들</h1>
+        <h3 class="title__sub">대혼돈의 시대</h3>
+      </div>
+      <div class="container-video">
+        <div class="part1 bg pr">
+          <div class="video_bg bg pa"></div>
+          <video
+            src="/assets/video01.mp4"
+            autoplay=""
+            loop=""
+            muted=""
+            playsinline=""
+          ></video>
+        </div>
+      </div>
+    </section>
+    <section class="container-first-text">
       <div class="global-width">
-        <nav>
-          <div class="title">
-            <h1 class="page-title">E상한I들</h1>
-            <h3 class="title__sub">대혼돈의 시대</h3>
-          </div>
-        </nav>
         <p>
           2023년 5월 3일 날씨좋은 어느날. 누가봐도 E성격을 가진 그들은, 각자
           자신을 MBTI의 첫 글자가 I라고 속이며 서로를 감춘다. 단판을 짓기위해
@@ -29,7 +41,7 @@
         </p>
         <p>(아래로 스크롤 ...)</p>
       </div>
-    </header>
+    </section>
     <section class="scroll-content">
       <div class="scroll-graphic container-images none">
         <!-- <div class="img-item">
