--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <div class="part1 bg pr">
           <div class="video_bg bg pa"></div>
           <video
-            src="/assets/video01.mp4"
-            autoplay=""
+            src="/assets/video02.mp4"
+            autoplay
+            muted
             loop=""
-            muted=""
             playsinline=""
           ></video>
         </div>
