--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="part1 bg pr">
           <div class="video_bg bg pa"></div>
           <video
-            src="/assets/video02.mp4"
+            src="./assets/video02.mp4"
             autoplay
             muted
             loop=""
