--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- 최상단 -->
     <section style="height: 100vh; position: relative">
       <div class="container-title">
         <h1 class="page-title">E상한I들</h1>
@@ -29,19 +30,21 @@
         </div>
       </div>
     </section>
+    <!-- 첫번째 말 -->
     <section class="container-first-text">
       <div class="global-width">
         <p>
           2023년 5월 3일 날씨좋은 어느날. 누가봐도 E성격을 가진 그들은, 각자
           자신을 MBTI의 첫 글자가 I라고 속이며 서로를 감춘다. 단판을 짓기위해
           <strong>강남 28층 대장 박인희</strong>의 집합명령이 떨어졌고 명령에
-          따라 우리는 폭풍의 서막, 노원구 석계역에서 집합했다. 서로가 서로를
-          속이는 그 7명의 화재인들이 함께 모여 단판 여행을 떠난다. 경기도 소재
-          남양주로 떠나는 1박 2일. 그들의 운명은 과연...
+          따라 우리는 폭풍의 서막, 노원구 석계역에서 집합했다. 이제부터 서로가
+          서로를 속이는 그 7명의 화재인들이 함께 모여 단판 여행을 떠난다. 경기도
+          소재 남양주로 떠나는 1박 2일. 그들의 운명은 과연...
         </p>
         <p>(아래로 스크롤 ...)</p>
       </div>
     </section>
+    <!-- 1. 스크롤 이미지 -->
     <section class="scroll-content">
       <div class="scroll-graphic container-images none">
         <!-- <div class="img-item">
@@ -59,6 +62,10 @@
         </div>
       </div>
     </section>
+    <section class="container-final-message global-width">
+      <h1>또 가고싶다</h1>
+    </section>
+    <!-- 하단 -->
     <section class="container-bottom global-width">
       <article>
         <h2>youtube</h2>
@@ -72,8 +79,10 @@
         ></iframe>
       </article>
     </section>
-    <footer class="global-footer">
+    <!-- 테그 -->
+    <footer>
       <div class="tags">
+        <span class="tag">#2023</span>
         <span class="tag">#박인희</span>
         <span class="tag">#이경란</span>
         <span class="tag">#이찬호</span>
