--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="E상한I들 | 대혼돈의 시대" />
+    <meta
+      property="og:image"
+      content="https://anminam.github.io/trip-20230503/images/지연1.jpeg"
+    />
+    <meta
+      property="og:description"
+      content="2023년 5월 3일 E상한I들의 여행기"
+    />
     <title>E상한I들 | 대혼돈의 시대</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap"
@@ -77,6 +87,21 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen
         ></iframe>
+      </article>
+      <article>
+        <h2>Notion</h2>
+        <div>
+          <a
+            id="bookmark-notion"
+            target="_blank"
+            href="https://anminam.notion.site/2023-MBTI-70e83e7a3ab543a99368b8e5ec92c6b6"
+          >
+            <div>
+              <div class="title">‘2023 MBTI 소통트립</div>
+              <div class="desc">Notion에서 확인하세요!</div>
+            </div></a
+          >
+        </div>
       </article>
     </section>
     <!-- 테그 -->
