--- a/index.html
+++ b/index.html
@@ -86,10 +86,21 @@
     <!-- 하단 -->
     <section class="container-bottom global-width">
       <article>
-        <h2>youtube</h2>
+        <h2>youtube - VLog</h2>
         <iframe
           class="youtube"
           src="https://www.youtube.com/embed/idB5YvGoGS8"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </article>
+      <article>
+        <h2>youtube - 뮤직비디오</h2>
+        <iframe
+          class="youtube"
+          src="https://www.youtube.com/embed/7ho1aZNbl8M"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
